openshift/ns-nginx-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-example
  labels:
    openshift.io/user-monitoring: "true"
