openshift/route-server.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: server
  labels:
    app: nginx
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
